--- a/windows.ui
+++ b/windows.ui
@@ -89,20 +89,6 @@
           </object>
         </child>
         <child>
-          <object class="ttk.Treeview" id="tv_files">
-            <property name="selectmode">browse</property>
-            <property name="show">headings</property>
-            <layout manager="place">
-              <property name="anchor">nw</property>
-              <property name="relwidth">0.933</property>
-              <property name="relx">0.033</property>
-              <property name="rely">0.289</property>
-              <property name="x">0</property>
-              <property name="y">0</property>
-            </layout>
-          </object>
-        </child>
-        <child>
           <object class="ttk.Progressbar" id="pb_download">
             <property name="orient">horizontal</property>
             <layout manager="place">
@@ -130,6 +116,33 @@
               <property name="x">0</property>
               <property name="y">0</property>
             </layout>
+          </object>
+        </child>
+        <child>
+          <object class="pygubu.builder.widgets.scrollbarhelper" id="scb_files">
+            <property name="height">100</property>
+            <property name="scrolltype">vertical</property>
+            <property name="usemousewheel">true</property>
+            <property name="width">100</property>
+            <layout manager="place">
+              <property name="anchor">nw</property>
+              <property name="relwidth">0.933</property>
+              <property name="relx">0.033</property>
+              <property name="rely">0.289</property>
+              <property name="x">0</property>
+              <property name="y">0</property>
+            </layout>
+            <child>
+              <object class="ttk.Treeview" id="tv_files">
+                <property name="selectmode">browse</property>
+                <property name="show">headings</property>
+                <layout manager="pack">
+                  <property name="fill">both</property>
+                  <property name="propagate">True</property>
+                  <property name="side">top</property>
+                </layout>
+              </object>
+            </child>
           </object>
         </child>
       </object>
